# median_path

./: .gitignore  CMakeLists.txt  README.md
benchmark_shapes/: 22290.ply  22808.ply  23091.ply  711_dente.ply  bird.ply  bird3.ply  elk2.ply  frog.ply  gargoyle.ply  ico.ply  memento.ply  mouse.ply  pipe.ply  rockerArm2.ply  seabowl.ply
cmake/modules/: FindCGAL.cmake  FindGraphicsOrigin.cmake  FindOpenMesh.cmake  FindTBB.cmake
doc/: Doxyfile.in  mainpage.dox
lib/: CMakeLists.txt  atomization.cc  delaunay_reconstruction.cc  io.cc  median_path.h.in  median_skeleton.cc  powershape_skeletonizer.cc  regular_triangulation_reconstruction.cc  regularization.cc  scale_regularizer.cc  shrinking_ball_skeletonizer.cc  skeletonization.cc  structuration.cc  voronoi_ball_skeletonizer.cc  weighted_zero_shape_structuration.cc
median-path/: atomization.h  io.h  median_skeleton.h  new_skeletonization.h  new_structuration.h  regularization.h  skeletonization.h  structuration.h
median-path/detail/: balls_format.h  delaunay_reconstruction_implementation.h  exceptions.h  io_utilities.h  json_format.h  median_format.h  median_skeleton.tcc  moff_format.h  skeleton_datastructure.h  skeleton_datastructure_construction_destruction.tcc  skeleton_datastructure_element_creation_and_deletion.tcc  skeleton_datastructure_elements_access.tcc  skeleton_datastructure_elements_and_properties.tcc  skeleton_datastructure_handle_and_entries.tcc  skeleton_datastructure_helper.tcc  skeleton_datastructure_property_management.tcc  web_format.h
qml/: CameraButton.qml  ColorButton.qml  FullscreenSceneWindow.qml  GeometryButton.qml  RenderingButton.qml  SGPViewer.qml  Style.qml  TopologyButton.qml  Viewer.qml
shaders/: balls.frag  border_junction.vert  flat_skeleton.frag  flat_skeleton.vert  skeleton.frag  skeleton.geom  skeleton.vert
src/: CMakeLists.txt  benchmark.cc  benchmark_viewer.cc  design_test.cc  export_for_alex.cc  filter_balls_outside_mesh.cc  full_screen_scene_application.cc  full_screen_scene_application.h  new_skeletonizer.cc  prepare_mesh_for_benchmark.cc  regularizer.cc  sgp_benchmark.cc  sgp_benchmark_viewer.cc  sgp_benchmark_viewer_window.cc  sgp_benchmark_viewer_window.h  simple_camera.cc  simple_camera.h  simple_gl_renderer.h  simple_gl_window.cc  simple_gl_window.h  simple_qml_application.cc  simple_qml_application.h  skeletonizer.cc  skeletons_renderable.cc  skeletons_renderable.h  viewer.cc  viewer_window.h
src/benchmark_viewer/: balls.vert  benchmark_viewer_window.cc  benchmark_viewer_window.h  skeleton.frag  skeleton.vert
src/common/: simple_camera.cc  simple_camera.h  simple_qml_application.cc  simple_qml_application.h  skeletons_renderable.cc  skeletons_renderable.h
src/new_skeletonizer/: skeletonizer_parameters.h
tests/: CMakeLists.txt  main.cc  median_skeleton.cc  median_skeleton_atom_management.cc  skeleton_datastructure.cc  skeleton_datastructure_clear.cc  skeleton_datastructure_construction.cc  skeleton_datastructure_create.cc  test.h
